[project]
name = "english-learning-typing-game"
version = "0.1.0"
description = ""
authors = [
    {name = "daniil",email = "wwcern0vdan11lzxc@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
